--- a/WarfaceLineups/WarfaceLineups.csproj
+++ b/WarfaceLineups/WarfaceLineups.csproj
@@ -8,10 +8,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="ClientApp" />
-      <Folder Include="Controllers" />
-      <Folder Include="Database" />
-      <Folder Include="Utils" />
+      <PackageReference Include="MailKit" Version="4.1.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0-preview.5.23280.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.31.0" />
+      <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.2" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.31.0" />
     </ItemGroup>
 
 </Project>
