--- a/WarfaceLineups/client/package.json
+++ b/WarfaceLineups/client/package.json
@@ -21,6 +21,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "dev": "webpack --mode production",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack-cli": "^5.1.4",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.0"
   }
 }
