--- a/WarfaceLineups/WarfaceLineups.csproj
+++ b/WarfaceLineups/WarfaceLineups.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="13.1.3" />
       <PackageReference Include="MailKit" Version="4.1.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0-preview.2.23128.3">
         <PrivateAssets>all</PrivateAssets>
