--- a/WarfaceLineups/nginx.conf
+++ b/WarfaceLineups/nginx.conf
@@ -4,12 +4,12 @@ events { worker_connections 1024; }
 http{
     server {
         listen 80;
-
         location / {
             proxy_pass http://client:3000;
         }
 
         location /api/ {
+            client_max_body_size 20M;
             proxy_pass http://backend:80/api/;
         }
         server_name warfacelineups.ru;
