--- a/WarfaceLineups/WarfaceLineups.csproj
+++ b/WarfaceLineups/WarfaceLineups.csproj
@@ -21,4 +21,8 @@
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.31.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Files\Screenshots" />
+    </ItemGroup>
+
 </Project>
