--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     volumes:
-      - screenshots:/WarfaceLineups/Files/Screenshots
+      - ./WarfaceLineups/Files/Screenshots:/app/Files/Screenshots
   db:
     image: mysql:latest
     container_name: db_mysql
@@ -74,6 +74,6 @@ services:
     
 volumes:
   mysql-data:
-  screenshots:
+
   
     
